# loop-erased-thermodynamics

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: biblio.bib  biblio3.bib  paper.tex  resistance.tex  results.tex  results_generated.tex  thermowilson.tex  wilson_algorithm.tex
scripts/: reconstruct_spectrum.py  run_wilson_experiments.py  sample_s_vs_q.py  validate_wilson_heattrace.py
src/wilson/: __init__.py  cli.py  fractal.py  graphs.py  inversion.py  parallel.py  plotting.py  spectral.py  utils.py  wilson.py  wilson2.py
tests/: test_wilson.py
