[project]
name = "thermowilson"
version = "0.1.0"
description = "Wilson algorithm experiments for thermodynamic graph analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
